--- a/HLS/ECE423_Lab2/.cproject
+++ b/HLS/ECE423_Lab2/.cproject
@@ -51,8 +51,6 @@
                                 								
                                 <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.include.paths.557365890" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
                                     									
-                                    <listOptionValue builtIn="false" value="C:/Users/j54mao/ece423/ECE-423-Labs/HLS"/>
-                                    									
                                     <listOptionValue builtIn="false" value="C:/Software/Xilinx/Vitis_HLS/2022.1/win64/tools/systemc/include"/>
                                     									
                                     <listOptionValue builtIn="false" value="C:/Software/Xilinx/Vitis_HLS/2022.1/win64/tools/auto_cc/include"/>
@@ -62,6 +60,10 @@
                                     <listOptionValue builtIn="false" value="C:/Software/Xilinx/Vitis_HLS/2022.1/include/etc"/>
                                     									
                                     <listOptionValue builtIn="false" value="C:/Software/Xilinx/Vitis_HLS/2022.1/include"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="C:/Users/hmcculla/ECE432/ECE-423-Labs/HLS"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="C:/Users/j54mao/ece423/ECE-423-Labs/HLS"/>
                                     								
                                 </option>
                                 								
@@ -87,8 +89,6 @@
                                 								
                                 <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.c.compiler.option.include.paths.218771637" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
                                     									
-                                    <listOptionValue builtIn="false" value="C:/Users/j54mao/ece423/ECE-423-Labs/HLS"/>
-                                    									
                                     <listOptionValue builtIn="false" value="C:/Software/Xilinx/Vitis_HLS/2022.1/win64/tools/systemc/include"/>
                                     									
                                     <listOptionValue builtIn="false" value="C:/Software/Xilinx/Vitis_HLS/2022.1/win64/tools/auto_cc/include"/>
@@ -98,6 +98,10 @@
                                     <listOptionValue builtIn="false" value="C:/Software/Xilinx/Vitis_HLS/2022.1/include/etc"/>
                                     									
                                     <listOptionValue builtIn="false" value="C:/Software/Xilinx/Vitis_HLS/2022.1/include"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="C:/Users/hmcculla/ECE432/ECE-423-Labs/HLS"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="C:/Users/j54mao/ece423/ECE-423-Labs/HLS"/>
                                     								
                                 </option>
                                 								
@@ -163,7 +167,7 @@
                     					
                     <sourceEntries>
                         						
-                        <entry excluding=".apc|.settings|*.c*|*.C*" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+                        <entry excluding=".apc|.settings|solution1|*.c*|*.C*" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
                         					
                     </sourceEntries>
                     				
@@ -223,8 +227,6 @@
                                 								
                                 <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.include.paths.1998283581" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
                                     									
-                                    <listOptionValue builtIn="false" value="C:/Users/j54mao/ece423/ECE-423-Labs/HLS"/>
-                                    									
                                     <listOptionValue builtIn="false" value="C:/Software/Xilinx/Vitis_HLS/2022.1/win64/tools/systemc/include"/>
                                     									
                                     <listOptionValue builtIn="false" value="C:/Software/Xilinx/Vitis_HLS/2022.1/win64/tools/auto_cc/include"/>
@@ -234,6 +236,10 @@
                                     <listOptionValue builtIn="false" value="C:/Software/Xilinx/Vitis_HLS/2022.1/include/etc"/>
                                     									
                                     <listOptionValue builtIn="false" value="C:/Software/Xilinx/Vitis_HLS/2022.1/include"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="C:/Users/hmcculla/ECE432/ECE-423-Labs/HLS"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="C:/Users/j54mao/ece423/ECE-423-Labs/HLS"/>
                                     								
                                 </option>
                                 								
@@ -249,8 +255,6 @@
                                 								
                                 <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.c.compiler.option.include.paths.1870431253" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
                                     									
-                                    <listOptionValue builtIn="false" value="C:/Users/j54mao/ece423/ECE-423-Labs/HLS"/>
-                                    									
                                     <listOptionValue builtIn="false" value="C:/Software/Xilinx/Vitis_HLS/2022.1/win64/tools/systemc/include"/>
                                     									
                                     <listOptionValue builtIn="false" value="C:/Software/Xilinx/Vitis_HLS/2022.1/win64/tools/auto_cc/include"/>
@@ -260,6 +264,10 @@
                                     <listOptionValue builtIn="false" value="C:/Software/Xilinx/Vitis_HLS/2022.1/include/etc"/>
                                     									
                                     <listOptionValue builtIn="false" value="C:/Software/Xilinx/Vitis_HLS/2022.1/include"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="C:/Users/hmcculla/ECE432/ECE-423-Labs/HLS"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="C:/Users/j54mao/ece423/ECE-423-Labs/HLS"/>
                                     								
                                 </option>
                                 								
@@ -315,7 +323,7 @@
                     					
                     <sourceEntries>
                         						
-                        <entry excluding=".apc|.settings|*.c*|*.C*" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+                        <entry excluding=".apc|.settings|solution1|*.c*|*.C*" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
                         					
                     </sourceEntries>
                     				
