--- a/HLS/ECE423_Lab2/.project
+++ b/HLS/ECE423_Lab2/.project
@@ -47,6 +47,11 @@
 			<location>C:/Users/hmcculla/ECE432/ECE-423-Labs/import_files/import_files/2D_idct.cc</location>
 		</link>
 		<link>
+			<name>source/2D_idct.h</name>
+			<type>1</type>
+			<location>C:/Users/hmcculla/ECE432/ECE-423-Labs/import_files/import_files/2D_idct.h</location>
+		</link>
+		<link>
 			<name>source/dct_math.h</name>
 			<type>1</type>
 			<location>C:/Users/hmcculla/ECE432/ECE-423-Labs/import_files/import_files/dct_math.h</location>
@@ -72,14 +77,9 @@
 			<location>C:/Users/hmcculla/ECE432/ECE-423-Labs/import_files/import_files/util.h</location>
 		</link>
 		<link>
-			<name>testbench/idct_2d_tb_1.txt</name>
+			<name>testbench/idct_tb_1.cpp</name>
 			<type>1</type>
-			<location>C:/Users/hmcculla/ECE432/ECE-423-Labs/Testbenches/idct_2d_tb_1.txt</location>
-		</link>
-		<link>
-			<name>testbench/idct_2d_tb_2.txt</name>
-			<type>1</type>
-			<location>C:/Users/hmcculla/ECE432/ECE-423-Labs/Testbenches/idct_2d_tb_2.txt</location>
+			<location>C:/Users/hmcculla/ECE432/ECE-423-Labs/Testbenches/idct_tb_1.cpp</location>
 		</link>
 		<link>
 			<name>solution1/constraints/.xml.directive</name>
